kawan-ngonser-backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kawan-ngonser-be
  labels:
    app: kawan-ngonser-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kawan-ngonser-be
  template:
    metadata:
      labels:
        app: kawan-ngonser-be
    spec:
      containers:
        - name: kawan-ngonser-be
          image: dta32/kawan-ngonser-backend:v1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
