kawan-ngonser-backend/k8s/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kawan-ngonser-be
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: kawan
  hostnames:
    - kawan-ngonser.dta32.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: kawan-ngonser-be-service
          namespace: default
          port: 80
